# chess-cli

./: LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS
chess_cli/: api.py  cache.py  config.py  db.py  main.py  models.py  output.py
chess_cli/commands/: analyze.py  blunders.py  config_cmd.py  games.py  init.py  openings.py  review.py  skill.py  stats.py  sync.py  update.py
chess_cli/data/: chess-skill.md  eco.tsv
chess_cli/engine/: opening.py  stockfish.py
